@@ -1119,8 +1119,8 @@ namespace libtorrent
 	session_settings::session_settings(std::string const& user_agent_)
 		: version(LIBTORRENT_VERSION_NUM)
 		, user_agent(user_agent_)
-		, tracker_completion_timeout(60)
-		, tracker_receive_timeout(40)
+		, tracker_completion_timeout(30)
+		, tracker_receive_timeout(10)
 		, stop_tracker_timeout(5)
 		, tracker_maximum_response_length(1024*1024)
 		, piece_timeout(20)
